[gd_scene load_steps=11 format=3 uid="uid://cxng6vx4ghx03"]

[ext_resource type="Script" path="res://Scripts/ScrollContainer.gd" id="1_5ycv7"]
[ext_resource type="Script" path="res://Scripts/ControlUpdrAssigner.gd" id="1_cgn5c"]
[ext_resource type="Script" path="res://Scripts/ShowPerf.gd" id="3_mhawo"]
[ext_resource type="Script" path="res://Scripts/ChangeCtrl.gd" id="3_yseb3"]
[ext_resource type="Script" path="res://Scripts/DebugWindowToggle.gd" id="4_tdbax"]
[ext_resource type="Script" path="res://Scripts/ResetCtrls.gd" id="5_p4cxv"]
[ext_resource type="Script" path="res://Scripts/VFXToggle.gd" id="6_dvjrd"]
[ext_resource type="Script" path="res://Scripts/UndoSettings.gd" id="6_m6t36"]
[ext_resource type="Script" path="res://Scripts/SaveSettings.gd" id="7_lnhlv"]

[sub_resource type="GDScript" id="GDScript_673fe"]
script/source = "extends Button

@onready var container := $'..'

func _pressed() -> void:
	container.destination = container.destination_text.text
	FileAccess.open(\"user://LAST_CONTROLS_DESTINATION.txt\",FileAccess.WRITE).store_line(container.destination)
	Global.change_scene('res://Scenes/main_menu.tscn')
"

[node name="Control" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
script = ExtResource("1_5ycv7")

[node name="Container" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/Container"]
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 6
columns = 2
script = ExtResource("1_cgn5c")

[node name="DestinationLabel" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Profile: "

[node name="Destination" type="LineEdit" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Controls"
placeholder_text = "Enter Here"
expand_to_text_length = true

[node name="Jump" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jump / Climb"

[node name="JumpKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[SPACE]"
script = ExtResource("3_yseb3")

[node name="Forward" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Walk Forward"

[node name="ForwardKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[W]"
script = ExtResource("3_yseb3")

[node name="Back" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Walk Backwards"

[node name="BackKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[S]"
script = ExtResource("3_yseb3")

[node name="Left" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Strafe Left"

[node name="LeftKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[A]"
script = ExtResource("3_yseb3")

[node name="Right" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Strafe Right"

[node name="RightKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[D]"
script = ExtResource("3_yseb3")

[node name="FocusHold" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Concentrate (Hold)"

[node name="FocusHoldKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[C]"
script = ExtResource("3_yseb3")

[node name="FocusToggle" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Concntrate (Toggle)"

[node name="FocusToggleKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[V]"
script = ExtResource("3_yseb3")

[node name="Sprint" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Sprint"

[node name="SprintKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[SHIFT]"
script = ExtResource("3_yseb3")

[node name="Item" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Drop / Pick Up"

[node name="ItemKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[Q]"
script = ExtResource("3_yseb3")

[node name="ZoomIn" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Zoom In"

[node name="ZoomInKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[Q]"
script = ExtResource("3_yseb3")

[node name="ZoomOut" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Zoom Out"

[node name="ZoomOutKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[Q]"
script = ExtResource("3_yseb3")

[node name="Inven" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Open Menu"

[node name="InvenKey" type="Button" parent="ScrollContainer/Container/GridContainer" groups=["ControlSetting"]]
process_priority = 1
layout_mode = 2
text = "[E]"
script = ExtResource("3_yseb3")

[node name="ShowPerfToggle" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Performance
"

[node name="ShowPerfButton" type="CheckButton" parent="ScrollContainer/Container/GridContainer"]
process_priority = 1
layout_mode = 2
script = ExtResource("3_mhawo")

[node name="SmallWindow" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Debug Window
"

[node name="DebugWindowToggle" type="CheckButton" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
script = ExtResource("4_tdbax")

[node name="VFX" type="Label" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fancy Effects"

[node name="VFXToggle" type="CheckButton" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
script = ExtResource("6_dvjrd")

[node name="Reset" type="Button" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset to Defaults"
script = ExtResource("5_p4cxv")

[node name="Esc" type="Button" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"
script = SubResource("GDScript_673fe")

[node name="Undo" type="Button" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Revert Changes & Load Profile"
script = ExtResource("6_m6t36")

[node name="Save" type="Button" parent="ScrollContainer/Container/GridContainer"]
layout_mode = 2
text = "Save Changes"
script = ExtResource("7_lnhlv")
